Bring python-unit-tests thing in sync between grapl build and grapl release

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -30,10 +30,17 @@ jobs:
         python-version: [3.7]
     steps:
       - uses: actions/checkout@v2
+
+      - name: Prepare Github Actions CI
+        run: |
+          ./etc/ci_scripts/clean_gh_actions_space.sh
+          ./etc/ci_scripts/install_requirements.sh
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Pants Cache
         uses: actions/cache@v2
         with:
@@ -43,6 +50,7 @@ jobs:
             ~/.cache/pants/setup
             ~/.cache/pants/named_caches
             ~/.cache/pants/lmdb_store
+
       - name: Python unit tests
         run: make test-unit-python
 
