--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -80,75 +80,9 @@ jobs:
         run: |
           make test-integration
 
-  check-pypi:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: [3.7]
-
-    steps:
-
-      - uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install pypi-simple
-        run: |
-          python3 -mvenv venv && . venv/bin/activate
-          pip install pypi-simple
-          deactivate
-      
-      - name: Export CHECK_PYPI_VERSION_ARGS as "check against prod pypi"
-        # passing 'false' to check_pypi means "check prod pypi.org" not test
-        run: |
-          echo "CHECK_PYPI_VERSION_ARGS=false" >> $GITHUB_ENV
-      # TODO: Reactivate this once the new graplinc-grapl-api package
-      # has been pushed to PyPi
-      #
-      # - name: Check whether graplinc-grapl-api version has been bumped
-      #   run: |
-      #     . venv/bin/activate
-      #     python etc/build_scripts/check_pypi_version.py \
-      #       graplinc-grapl-api \
-      #       $(cat src/python/graplinc-grapl-api/VERSION) \
-      #       $CHECK_PYPI_VERSION_ARGS
-      #     deactivate
-      - name: Check whether grapl_analyzerlib version has been bumped
-        run: |
-          . venv/bin/activate
-          python etc/build_scripts/check_pypi_version.py \
-            grapl_analyzerlib \
-            $(cat src/python/grapl_analyzerlib/VERSION) \
-            $CHECK_PYPI_VERSION_ARGS
-          deactivate
-
-      - name: Check whether grapl-common version has been bumped
-        run: |
-          . venv/bin/activate
-          python etc/build_scripts/check_pypi_version.py \
-            grapl-common \
-            $(cat src/python/grapl-common/VERSION) \
-            $CHECK_PYPI_VERSION_ARGS
-          deactivate
-
-      - name: Check whether grapl-tests-common version has been bumped
-        run: |
-          . venv/bin/activate
-          python etc/build_scripts/check_pypi_version.py \
-            grapl-tests-common \
-            $(cat src/python/grapl-tests-common/VERSION) \
-            $CHECK_PYPI_VERSION_ARGS
-          deactivate
-
-
-
   release-services:
     runs-on: ubuntu-latest
-    needs: [rust-unit-tests, python-unit-tests, js-unit-tests, integration-tests, check-pypi]
+    needs: [rust-unit-tests, python-unit-tests, js-unit-tests, integration-tests]
 
     steps:
       - uses: actions/checkout@v2
