--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -469,9 +469,11 @@ services:
     environment:
       <<: *aws-region
       <<: *dgraph-env
+      <<: *dynamodb-env
       IS_LOCAL: "True"
       JWT_SECRET_ID: "JWT_SECRET_ID"
       PORT: ${GRAPL_GRAPHQL_PORT}
+      GRAPL_SCHEMA_TABLE: "${DEPLOYMENT_NAME}-grapl_schema_table"
       <<: *secretsmanager-env
     depends_on:
       - dgraph
