--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -109,12 +109,19 @@ jobs:
 
   build-zips:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7]
     steps:
       - uses: actions/checkout@v2
       - name: Prepare Github Actions CI
         run: |
           ./etc/ci_scripts/clean_gh_actions_space.sh
           ./etc/ci_scripts/install_requirements.sh
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Build AWS Lambda ZIP files
         run: make zip
 
@@ -132,7 +139,7 @@ jobs:
         run: |
           ./etc/ci_scripts/clean_gh_actions_space.sh
           ./etc/ci_scripts/install_requirements.sh
-      
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
@@ -142,14 +149,14 @@ jobs:
         run: |
           echo "unset RUSTC_WRAPPER" > rust_env.sh
           GRAPL_RUST_ENV_FILE=rust_env.sh GRAPL_LOG_LEVEL=DEBUG make test-integration
-      
+
       # NOTE: This requires >= py37
       # Unlike the e2e tests, we don't dump the database contents; strictly logs.
       - name: 'Collect integration test artifacts'
         if: ${{ always() }}
         run: |
           python3 ./etc/ci_scripts/dump_artifacts.py --compose-project "grapl-integration_tests"
-           
+
       - name: 'Upload integration test artifacts'
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
@@ -188,14 +195,14 @@ jobs:
           GRAPL_LOG_LEVEL=DEBUG DUMP_ARTIFACTS=True make test-e2e ||
           GRAPL_LOG_LEVEL=DEBUG DUMP_ARTIFACTS=True make test-e2e ||
           GRAPL_LOG_LEVEL=DEBUG DUMP_ARTIFACTS=True make test-e2e
-   
+
 
       # NOTE: This requires >= py37
       - name: 'Collect e2e test artifacts'
         if: ${{ always() }}
         run: |
           python3 ./etc/ci_scripts/dump_artifacts.py --compose-project "grapl-e2e_tests"
-           
+
       - name: 'Upload e2e test artifacts'
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
