--- a/3rdparty/python/requirements.txt
+++ b/3rdparty/python/requirements.txt
@@ -1,8 +1,10 @@
 # Any Python dependencies used by our code should be declared here.
 boto3
 chalice
+click
 hypothesis
 mypy_boto3_dynamodb
+mypy_boto3_lambda
 mypy_boto3_s3
 mypy_boto3_sagemaker
 mypy_boto3_secretsmanager
