--- a/pulumi/Pulumi.local-grapl.yaml
+++ b/pulumi/Pulumi.local-grapl.yaml
@@ -2,9 +2,13 @@ encryptionsalt: v1:KRH5XXw/Vv4=:v1:Mi1EOttYFIuFy8Zl:u/QoTfZuh9c5m6Jyw2L3mAKC+VNs
 config:
   aws:accessKey: test
   aws:endpoints:
-  - dynamodb: http://localhost:4566
+  - cloudwatchlogs: http://localhost:4566
+    dynamodb: http://localhost:4566
+    iam: http://localhost:4566
+    lambda: http://localhost:4566
     s3: http://localhost:4566
     secretsmanager: http://localhost:4566
+    sns: http://localhost:4566
     sqs: http://localhost:4566
   aws:region: us-east-1
   aws:s3ForcePathStyle: "true"
