--- a/src/js/graphql_endpoint/package.json
+++ b/src/js/graphql_endpoint/package.json
@@ -29,6 +29,7 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/google-protobuf": "^3.7.2",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/protobufjs": "^6.0.0",
     "typescript": "^4.2.3"
   }
