Add vendoring to Cargo config and no longer include Cargo registry in Docker build cache.

--- a/src/.dockerignore
+++ b/src/.dockerignore
@@ -2,6 +2,7 @@
 **/node_modules
 
 rust/target
+# We intentionally do no include rust/vendor so Docker will pick it up if it exists
 
 js/grapl-cdk/zips
 js/grapl-cdk/cdk.out
