--- a/src/rust/.cargo/config.toml
+++ b/src/rust/.cargo/config.toml
@@ -2,3 +2,9 @@
 rustflags = [
     "--deny=warnings",
 ]
+
+[source.crates-io]
+replace-with = "vendored-sources"
+
+[source.vendored-sources]
+directory = "vendor"
