--- a/pulumi/Pulumi.local-grapl.yaml
+++ b/pulumi/Pulumi.local-grapl.yaml
@@ -15,4 +15,5 @@ config:
   aws:secretKey: test
   aws:skipCredentialsValidation: "true"
   aws:skipRequestingAccountId: "true"
+  grapl:MG_ALPHAS: dgraph.grapl.test:9080
   grapl:import_from_existing: "False"
