Mount zips directory into Pulumi container for access to lambdas
Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -497,6 +497,11 @@ services:
     # both inside this compose network, as well as from outside on our
     # workstations.
     network_mode: "service:localstack"
+    volumes:
+      - type: bind
+        source: ./src/js/grapl-cdk/zips
+        target: /home/grapl/src/js/grapl-cdk/zips
+        read_only: true
     environment:
       PULUMI_CONFIG_PASSPHRASE: local-grapl-passphrase
     depends_on:
