Revert "Remove graphql_endpoint_tests dir"
This reverts commit cd8d53e2508b7fae7aa3f72205a8eb2056d22743.

introduce integration test

I think it's all good except for repeated AssetProps

--- a/src/python/Dockerfile
+++ b/src/python/Dockerfile
@@ -457,6 +457,11 @@ RUN source venv/bin/activate && \
     pip install . && \
     python setup.py sdist bdist_wheel
 
+# GraphQL Endpoint tests
+################################################################################
+FROM grapl-tests-common-build AS graphql-endpoint-tests
+
+COPY --chown=grapl python/graphql_endpoint_tests graphql_endpoint_tests
 
 # E2E tests
 ################################################################################
