--- a/local-grapl.env
+++ b/local-grapl.env
@@ -37,8 +37,9 @@ REDIS_PORT=6379
 # Localstack Secretsmanager
 SECRETSMANAGER_PORT=${LOCALSTACK_PORT}
 
-# TODO: This may be a different port for different services
-VSC_DEBUGGER=8401
+VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS=8400
+VSC_DEBUGGER_PORT_FOR_ANALYZER_EXECUTOR=8401
+VSC_DEBUGGER_PORT_FOR_ENGAGEMENT_EDGE=8402
 
 # Local-only "signaling" port
 #
