--- a/test/docker-compose.e2e-tests.yml
+++ b/test/docker-compose.e2e-tests.yml
@@ -41,8 +41,9 @@ services:
       - SQS_ACCESS_KEY_ID
       - SQS_ACCESS_KEY_SECRET
       - SQS_ENDPOINT
+      - VSC_DEBUGGER_PORT=${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}
     ports:
-      - 8400:8400
+      - ${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}:${VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS}
 
 volumes:
   dynamodb_dump:
