Remove hard-coded values for deployment name and dgraph host from Python tests code and make them available as parameters via environment variables.

--- a/test/docker-compose.e2e-tests.yml
+++ b/test/docker-compose.e2e-tests.yml
@@ -23,6 +23,8 @@ services:
       - AWS_REGION
       - DEPLOYMENT_NAME
       - DEBUG_SERVICES=${DEBUG_SERVICES}
+      - DGRAPH_HOST
+      - DGRAPH_ALPHA_HTTP_EXTERNAL_PUBLIC_PORT
       - DUMP_ARTIFACTS=${DUMP_ARTIFACTS:-False}
       - DYNAMODB_ACCESS_KEY_ID
       - DYNAMODB_ACCESS_KEY_SECRET
