Add VPC infrastructure to Pulumi, Localstack
This replicates (to the best of my knowledge) the infrastructure that
was generated for us by CDK's VPC construct:

- One VPC
- 2 public subnets, 2 private subnets, one each in two separate
  availability zones
- 1 internet gateway
- 1 NAT gateway
- Each lambda function gets a dedicated Security Group, as well as
  access to both private subnets.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
       - IMAGE_NAME=localstack/localstack:0.12.8
       - EDGE_PORT=${LOCALSTACK_PORT}
       - HOSTNAME_EXTERNAL=${LOCALSTACK_HOST}
-      - SERVICES=dynamodb,events,iam,lambda,logs,s3,secretsmanager,sns,sqs
+      - SERVICES=dynamodb,ec2,events,iam,lambda,logs,s3,secretsmanager,sns,sqs
       - DEBUG=1
       - LS_LOG=debug
       - LAMBDA_EXECUTOR=docker
