--- a/local-grapl.env
+++ b/local-grapl.env
@@ -27,6 +27,7 @@ DYNAMODB_PORT=${LOCALSTACK_PORT}
 GRAPL_AUTH_PORT=8900
 GRAPL_DGRAPH_TTL_PORT=8124
 GRAPL_GRAPHQL_PORT=5000
+GRAPL_HTTP_FRONTEND_PORT=3128
 GRAPL_MODEL_PLUGIN_DEPLOYER_PORT=8123
 GRAPL_NOTEBOOK_PORT=8888
 GRAPL_UX_ROUTER_PORT=8901
