--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -8,5 +8,7 @@ COPY . .
 
 RUN apt-get update && apt-get -y install --no-install-recommends wait-for-it
 
+RUN yarn install
+
 ENTRYPOINT [""]
 CMD cypress run --browser chrome --headless
