Update Rust toolchain to 1.51 and latest nightly that supports rustfmt. Additionally, this resolves errors and warnings that came up as a result.

--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -9,4 +9,4 @@ reorder_modules = true
 group_imports = "StdExternalCrate"
 imports_indent = "Visual"
 imports_layout = "Vertical"
-merge_imports = true
+imports_granularity = "Crate"
