Remove use of `TARGET` in Rust Dockerfile. This looks like leftovers from previous versions, and is no longer used. The step still worked, because the path resolves just the same, but it doesn't make sense for it to be there.

--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -57,7 +57,7 @@ RUN mkdir -p /grapl/zips; \
     grapl-zip() { \
       TMPDIR="$(mktemp -d)"; \
       cd "$TMPDIR"; \
-      cp "/grapl/rust/target/${TARGET}/${CARGO_PROFILE}/${1}" bootstrap && \
+      cp "/grapl/rust/target/${CARGO_PROFILE}/${1}" bootstrap && \
       zip --quiet -9 "/grapl/zips/${1}.zip" bootstrap; \
     }; \
     grapl-zip metric-forwarder
