--- a/src/rust/sqs-executor/Cargo.toml
+++ b/src/rust/sqs-executor/Cargo.toml
@@ -16,6 +16,8 @@ rusoto_sqs = {version = "0.46", default_features = false, features=["rustls"]}
 
 tokio = { version = "1", features = ["io-util", "sync", "rt", "macros", "time", "rt-multi-thread"] }
 
+redis = { version = "0.20", features = ["tokio-comp", "connection-manager"] }
+
 serde = "1.0"
 serde_json = "1.0"
 prost = "0.7"
@@ -27,7 +29,6 @@ futures-util = "0.3.8"
 uuid = {version = "0.8.1", features=["v4"]}
 lazy_static = "1.4"
 futures = "0.3.8"
-darkredis = "0.8.0"
 num_cpus = "1.13.0"
 hex = "0.4.2"
 tap = "1.0.0"
@@ -35,3 +36,4 @@ chrono = "0.4.19"
 aws_lambda_events = "0.3.1"
 stopwatch = "0.0.7"
 lru = "0.6"
+itertools = "0.10"
