Dockerfile fixed for graphql zip (#713)

--- a/src/js/graphql_endpoint/Dockerfile
+++ b/src/js/graphql_endpoint/Dockerfile
@@ -33,12 +33,14 @@ COPY --chown=grapl js/graphql_endpoint/server.ts server.ts
 
 # This compiles the typescript and spits out the built js files to `lambda/ts_compiled'
 RUN npx tsc
+RUN cp -r ./node_modules ./ts_compiled/node_modules
 
 WORKDIR /home/grapl
 
 # zip
 FROM graphql-endpoint-build AS graphql-endpoint-zip
 
+RUN test -d lambda/ts_compiled/node_modules && echo "Okay, found node_modules"
 RUN cd lambda/ts_compiled && \
     zip -q9r /home/grapl/lambda.zip ./
 
