--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -390,7 +390,7 @@ services:
     volumes:
       - ./etc/local_grapl/nginx_templates:/etc/nginx/templates
     ports:
-      - "127.0.0.1:1234:3128"
+      - "127.0.0.1:1234:${GRAPL_HTTP_FRONTEND_PORT}"
     environment:
       - GRAPL_AUTH_HOST
       - GRAPL_AUTH_PORT
