GraphQL Endpoint reads dynamodb schema to generate types (357)
some formats

okay gotta figure out recursive types

I think it works except for the cannot-query-field-uid thing

Inching closer, just bad at detecting Lens and Risk

node debug branch

Got debugger for graphql working

minor bugfixes here and there

I think it may work now except for plugintype

Upgrade to Pulumi 2.24.1

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

Added debugger for graphql_endpoint (#724)

* node debug branch

* Got debugger for graphql working

What if I remove PluginType

It works, except Scope returns an array of None

bahahaha it works

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -425,7 +425,7 @@ services:
       PORT: ${GRAPL_GRAPHQL_PORT}
       GRAPL_SCHEMA_PROPERTIES_TABLE: "${DEPLOYMENT_NAME}-grapl_schema_properties_table"
       GRAPL_SCHEMA_TABLE: "${DEPLOYMENT_NAME}-grapl_schema_table"
-
+      <<: *dynamodb-env
       <<: *secretsmanager-env
       DEBUG_SERVICES: "${DEBUG_SERVICES}"
       VSC_DEBUGGER_PORT_FOR_GRAPHQL_ENDPOINT: "${VSC_DEBUGGER_PORT_FOR_GRAPHQL_ENDPOINT}"
