--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -123,7 +123,12 @@ services:
         py.test --capture=no -n 1 -m "integration_test"
       '
     environment:
+      - AWS_REGION
       - DEBUG_SERVICES
+      - DEPLOYMENT_NAME
+      - DYNAMODB_ENDPOINT
+      - DYNAMODB_ACCESS_KEY_ID
+      - DYNAMODB_ACCESS_KEY_SECRET
       - GRAPL_AUTH_HOST
       - GRAPL_AUTH_PORT
       - GRAPL_GRAPHQL_HOST
