--- a/Dockerfile.pulumi
+++ b/Dockerfile.pulumi
@@ -1,24 +1,4 @@
-FROM python:3.7-slim-buster as pants-base
-
-SHELL ["/bin/bash", "-c"]
-
-RUN apt-get update && apt-get install --yes \
-    build-essential \
-    curl \
-    unzip \
-    wait-for-it
-
-RUN adduser \
-        --disabled-password \
-        --gecos '' \
-        --home /home/grapl \
-        --shell /bin/bash \
-        grapl
-
-USER grapl
-ENV USER=grapl
-WORKDIR /home/grapl
-
+FROM grapl-python-base as pants-base
 RUN curl -O https://get.pulumi.com/releases/sdk/pulumi-v2.24.1-linux-x64.tar.gz && \
     tar -xzvf pulumi-*.tar.gz && \
     mv pulumi pulumi-bin
