--- a/local-grapl.env
+++ b/local-grapl.env
@@ -42,6 +42,7 @@ VSC_DEBUGGER_PORT_FOR_GRAPL_E2E_TESTS=8400
 VSC_DEBUGGER_PORT_FOR_ANALYZER_EXECUTOR=8401
 VSC_DEBUGGER_PORT_FOR_ENGAGEMENT_EDGE=8402
 VSC_DEBUGGER_PORT_FOR_GRAPHQL_ENDPOINT_TESTS=8403
+VSC_DEBUGGER_PORT_FOR_GRAPHQL_ENDPOINT=8404
 
 # Local-only "signaling" port
 #
