--- a/Dockerfile.pulumi
+++ b/Dockerfile.pulumi
@@ -1,4 +1,5 @@
-FROM grapl-python-base as pants-base
+FROM grapl/grapl-python-base:$TAG as pants-base
+ARG TAG=latest
 RUN curl -O https://get.pulumi.com/releases/sdk/pulumi-v2.24.1-linux-x64.tar.gz && \
     tar -xzvf pulumi-*.tar.gz && \
     mv pulumi pulumi-bin
