--- a/src/js/graphql_endpoint/package.json
+++ b/src/js/graphql_endpoint/package.json
@@ -4,8 +4,7 @@
   "description": "grapl graphql server",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "Grapl Inc.",
   "license": "ISC",
