Add DGraph TTL service to Pulumi
This also entails:
- Building the lambda ZIP using Pants
- Changing the handler name in our CDK code accordingly
- Renaming app.py to grapl_dgraph_ttl.py for use with Pants
  We've got another `app.py` module elsewhere at the same level, so
  that ends up clashing in Pants' dependency resolution logic.
- Removing old ZIP-building services and Docker containers
- Removing the standalone "local" DGraph TTL service from Local Grapl
- Removing the `IS_LOCAL` logic from the service

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
       - IMAGE_NAME=localstack/localstack:0.12.8
       - EDGE_PORT=${LOCALSTACK_PORT}
       - HOSTNAME_EXTERNAL=${LOCALSTACK_HOST}
-      - SERVICES=dynamodb,iam,lambda,logs,s3,secretsmanager,sns,sqs
+      - SERVICES=dynamodb,events,iam,lambda,logs,s3,secretsmanager,sns,sqs
       - DEBUG=1
       - LS_LOG=debug
       - LAMBDA_EXECUTOR=docker
@@ -367,19 +367,6 @@ services:
       default:
         aliases:
           - ${GRAPL_MODEL_PLUGIN_DEPLOYER_HOST}
-
-  grapl-dgraph-ttl:
-    image: grapl/grapl-dgraph-ttl:${TAG:-latest}
-    command: /bin/sh -c '. venv/bin/activate && cd /home/grapl/app && chalice local --no-autoreload --host=0.0.0.0 --port=${GRAPL_DGRAPH_TTL_PORT}'
-    environment:
-      <<: *dgraph-env
-      GRAPL_DGRAPH_TTL_S: "${GRAPL_DGRAPH_TTL_S:-31536000}"
-      GRAPL_TTL_DELETE_BATCH_SIZE: "${GRAPL_TTL_DELETE_BATCH_SIZE:-10}"
-      IS_LOCAL: "True"
-      <<: *log-level
-    tty: true
-    depends_on:
-      - dgraph
 
   ########################################################################
   # Web Services
