--- a/src/python/grapl-dgraph-ttl/BUILD
+++ b/src/python/grapl-dgraph-ttl/BUILD
@@ -1,1 +1,7 @@
 python_library()
+
+python_awslambda(
+    name="lambda",
+    runtime="python3.7",
+    handler="grapl_dgraph_ttl.py:prune_expired_subgraphs"
+)
