Expose API Gateway to the rest of Local Grapl
Our base infrastructure code doesn't define a DNS name for the API
Gateway instance. As a result, we don't have a stable address to
access that API.

To complicate things, Localstack has its own special invocation URL
for APIs.

To help abstract this, we'll put the API gateway instance behind our
existing Nginx service (if you squint, this basically turns Nginx into
a glorified DNS server for our API gateway). To do this, we have to
expose the API Gateway instance's ID to Nginx. We'll use Pulumi stack
outputs along with a Docker volume shared between the Pulumi and Nginx
containers to get the information from one place to the other
relatively straightforwardly. We write the stack output to a file in
the volume on the Pulumi side, and then read that file into an
environment variable that our Nginx configuration template uses to
create the final URL.

For now, we are only exposing the auth endpoint, as that is the only
thing the API Gateway knows about at the moment. As more lambdas are
put behind the API Gateway, our Nginx configuration will simplify
until it simply proxies everything to the gateway directly.

Signed-off-by: Christopher Maier <chris@graplsecurity.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@
 version: "3.8"
 volumes:
   dgraph_export:
+  pulumi_outputs:
+    # This volume will be used to output Pulumi stack outputs that may
+    # need to be accessible in test containers.
 
 x-common-variables:
   aws-region: &aws-region
@@ -111,7 +114,7 @@ services:
     healthcheck:
       test: |
         bash -c '
-          export AWS_ACCESS_KEY_ID=${FAKE_AWS_ACCESS_KEY_ID} && 
+          export AWS_ACCESS_KEY_ID=${FAKE_AWS_ACCESS_KEY_ID} &&
           export AWS_SECRET_ACCESS_KEY=${FAKE_AWS_SECRET_ACCESS_KEY} &&
           aws --endpoint-url=http://${LOCALSTACK_HOST}:${LOCALSTACK_PORT} s3 ls
         '
@@ -416,24 +419,39 @@ services:
 
   nginx:
     image: nginxinc/nginx-unprivileged
+    command: |
+      /bin/bash -c "
+        export API_GATEWAY_API_ID=$$(cat /pulumi-outputs/prod-api-id) &&
+        /docker-entrypoint.sh nginx -g 'daemon off;'
+      "
     volumes:
       - ./etc/local_grapl/nginx_templates:/etc/nginx/templates
+      - type: volume
+        source: pulumi_outputs
+        target: /pulumi-outputs
+        read_only: true
     ports:
       - "127.0.0.1:1234:${GRAPL_HTTP_FRONTEND_PORT}"
     environment:
-      - GRAPL_AUTH_HOST
-      - GRAPL_AUTH_PORT
       - GRAPL_GRAPHQL_HOST
       - GRAPL_GRAPHQL_PORT
       - GRAPL_MODEL_PLUGIN_DEPLOYER_HOST
       - GRAPL_MODEL_PLUGIN_DEPLOYER_PORT
       - GRAPL_UX_ROUTER_HOST
       - GRAPL_UX_ROUTER_PORT
+      - LOCALSTACK_HOST
+      - LOCALSTACK_PORT
     depends_on:
-      - grapl-engagement-edge
-      - grapl-model-plugin-deployer
-      - grapl-graphql-endpoint
-      - grapl-ux-router
+      grapl-model-plugin-deployer:
+        condition: service_started
+      grapl-graphql-endpoint:
+        condition: service_started
+      grapl-ux-router:
+        condition: service_started
+      grapl-pulumi:
+        # We must wait until Pulumi has created the API gateway so we
+        # know what its URL is.
+        condition: service_completed_successfully
     networks:
       default:
         aliases:
@@ -499,10 +517,12 @@ services:
     image: grapl/grapl-local-pulumi:${TAG:-latest}
     command: |
       /bin/bash -c "
-         sleep 10 &&
          pulumi login --local &&
          pulumi stack init local-grapl --non-interactive &&
-         pulumi up --yes --skip-preview --stack=local-grapl
+         pulumi up --yes --skip-preview --stack=local-grapl &&
+
+         # Write the necessary outputs to the shared volume, for access by other containers
+         pulumi stack output prod-api-id > /home/grapl/pulumi-outputs/prod-api-id
       "
     # Our local-grapl Pulumi stack is configured to communicate with
     # localhost. By participating in the network namespace of our
@@ -515,6 +535,10 @@ services:
         source: ./src/js/grapl-cdk/zips
         target: /home/grapl/src/js/grapl-cdk/zips
         read_only: true
+      - type: volume
+        source: pulumi_outputs
+        target: /home/grapl/pulumi-outputs
+        read_only: false
     environment:
       PULUMI_CONFIG_PASSPHRASE: local-grapl-passphrase
     depends_on:
