--- a/src/js/graphql_endpoint/tsconfig.json
+++ b/src/js/graphql_endpoint/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2020",
     "allowJs": true,
     "outDir": "./ts_compiled",
 
     "lib": [
-      // no DOM
+      "DOM",  // Surprising inclusion, but needed for the dynamodb tools
       "ES5",
       "ScriptHost"
     ],
 
     //"strict": true,
-    //"downlevelIteration": true,
+    "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
     "noImplicitAny": true,
     "forceConsistentCasingInFileNames": true
   },
