--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -12,7 +12,7 @@
     "create_edge_ux_package": "node bin/create_edge_ux_package.js"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.82.0",
+    "@aws-cdk/assert": "1.97.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@types/uuid": "8.3.x",
@@ -23,37 +23,36 @@
     "typescript": "4.0.x"
   },
   "dependencies": {
-    "@aws-cdk/aws-cloudwatch": "1.82.0",
-    "@aws-cdk/aws-cloudwatch-actions": "1.82.0",
-    "@aws-cdk/aws-dynamodb": "1.82.0",
-    "@aws-cdk/aws-ec2": "1.82.0",
-    "@aws-cdk/aws-ecs": "1.82.0",
-    "@aws-cdk/aws-ecs-patterns": "1.82.0",
-    "@aws-cdk/aws-elasticache": "1.82.0",
-    "@aws-cdk/aws-events": "1.82.0",
-    "@aws-cdk/aws-events-targets": "1.82.0",
-    "@aws-cdk/aws-iam": "1.82.0",
-    "@aws-cdk/aws-lambda": "1.82.0",
-    "@aws-cdk/aws-lambda-event-sources": "1.82.0",
-    "@aws-cdk/aws-logs-destinations": "1.82.0",
-    "@aws-cdk/aws-rds": "1.82.0",
-    "@aws-cdk/aws-s3": "1.82.0",
-    "@aws-cdk/aws-s3-deployment": "1.82.0",
-    "@aws-cdk/aws-s3-notifications": "1.82.0",
-    "@aws-cdk/aws-sagemaker": "1.82.0",
-    "@aws-cdk/aws-secretsmanager": "1.82.0",
-    "@aws-cdk/aws-servicediscovery": "1.82.0",
-    "@aws-cdk/aws-sns": "1.82.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.82.0",
-    "@aws-cdk/aws-sqs": "1.82.0",
-    "@aws-cdk/core": "1.82.0",
+    "@aws-cdk/aws-cloudwatch": "1.97.0",
+    "@aws-cdk/aws-cloudwatch-actions": "1.97.0",
+    "@aws-cdk/aws-dynamodb": "1.97.0",
+    "@aws-cdk/aws-ec2": "1.97.0",
+    "@aws-cdk/aws-ecs": "1.97.0",
+    "@aws-cdk/aws-ecs-patterns": "1.97.0",
+    "@aws-cdk/aws-elasticache": "1.97.0",
+    "@aws-cdk/aws-events": "1.97.0",
+    "@aws-cdk/aws-events-targets": "1.97.0",
+    "@aws-cdk/aws-iam": "1.97.0",
+    "@aws-cdk/aws-lambda": "1.97.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.97.0",
+    "@aws-cdk/aws-logs-destinations": "1.97.0",
+    "@aws-cdk/aws-rds": "1.97.0",
+    "@aws-cdk/aws-s3": "1.97.0",
+    "@aws-cdk/aws-s3-deployment": "1.97.0",
+    "@aws-cdk/aws-s3-notifications": "1.97.0",
+    "@aws-cdk/aws-sagemaker": "1.97.0",
+    "@aws-cdk/aws-secretsmanager": "1.97.0",
+    "@aws-cdk/aws-servicediscovery": "1.97.0",
+    "@aws-cdk/aws-sns": "1.97.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.97.0",
+    "@aws-cdk/aws-sqs": "1.97.0",
+    "@aws-cdk/core": "1.97.0",
     "@types/node-dir": "0.0.33",
     "aws-sdk": "2.784.x",
     "cdk": "^1.77.0",
     "cdk-watchful": "^0.5.86",
     "node-dir": "0.1.17",
-    "node-env-file": "0.1.8",
-    "source-map-support": "0.5.19"
+    "node-env-file": "0.1.8"
   },
   "description": "Here you will find the [AWS CDK](https://aws.amazon.com/cdk/) code for a Grapl deployment in AWS.",
   "main": "jest.config.js",
